[package]
name = "common"
description = "common utilities for lumen"
version = "0.2.0"
authors = ["Naim A. <naim@abda.nl>"] # forked and change by dDostalker <dDostalker@foxmail.com>
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.39", features = ["full"], optional = true }
log = { version = "0.4", features = ["release_max_level_debug"] }
serde = { version = "1.0", features = ["derive"] }
futures-util = "0.3"
toml = "0.8"
warp = { version = "0.3", optional = true }
binascii = "0.1"
anyhow = "1.0"
prometheus-client = "0.22"
time = "0.3.36"
turso = "0.6"

[features]
default = ["web", "db"]
web = ["warp"]
db = ["tokio"]
