[package]
name = "common"
description = "common utilities for lumen"
version = "0.2.0"
authors = ["Naim A. <naim@abda.nl>"] # forked and change by dDostalker <dDostalker@foxmail.com>
edition = "2024"
publish = false

[dependencies]
tokio = { version = "1.49", features = ["full"], optional = true }
log = { version = "0.4.29", features = ["release_max_level_debug"] }
serde = { version = "1.0.228", features = ["derive"] }
futures-util = "0.3.32"
toml = "0.8.23"
warp = { version = "0.3.7", optional = true }
binascii = "0.1.4"
anyhow = "1.0.102"
prometheus-client = "0.22.3"
time = "0.3.47"
turso = "0.6.1"

[features]
default = ["web", "db"]
web = ["warp"]
db = ["tokio"]
