[package]
name = "lumen"
description = "lumen server"
version = "0.2.0"
authors = ["Naim A. <naim@abda.nl>"] # forked and change by dDostalker <dDostalker@foxmail.com>
edition = "2024"
publish = false

[dependencies]
common = { path = "../common" }
tokio = { version = "1.49", features = ["full"] }
log = { version = "0.4.29", features = ["release_max_level_debug"] }
pretty_env_logger = "0.5"
clap = "4.5.6"
tokio-native-tls = "0.3.1"
native-tls = { version = "0.2.18" }
warp = "0.3.7"
prometheus-client = "0.22.3"
